k8s/apps/base/proxmox/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox
  namespace: proxmox
spec:
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8006
